# aoc2022

./: CMakeLists.txt  README.md  day_01a.cpp  day_01b.cpp  day_02a.cpp  day_02b.cpp  day_03a.cpp  day_03b.cpp  day_04a.cpp  day_04b.cpp  day_05a.cpp  day_05b.cpp  day_06a.cpp  day_06b.cpp  day_07a.cpp  day_07b.cpp  day_08a.cpp  day_08b.cpp  day_09a.cpp  day_09b.cpp  day_10a.cpp  day_10b.cpp  day_11a.cpp  day_11b.cpp  day_12a.cpp  day_12b.cpp  day_13a.cpp  day_13b.cpp  day_14a.cpp  day_14b.cpp  day_15a.cpp  day_15b.cpp  day_16a.cpp  day_16a_01.cpp  day_16a_02.cpp  day_16a_aux.cpp  day_16b.cpp  day_17a.cpp  day_17b.cpp  day_18a.cpp  (+17 more)
input/: input_day23.txt  test_day16_2.txt  test_day21_1.txt  test_day21_10.txt  test_day21_2.txt  test_day21_3.txt  test_day21_4.txt  test_day21_5.txt  test_day21_6.txt  test_day21_7.txt  test_day21_8.txt  test_day21_9.txt
