
cmake_minimum_required (VERSION 3.8)

project(AoC_2022 CXX)
set(CMAKE_CXX_STANDARD 20)

add_executable(day_01a day_01a.cpp)
add_executable(day_01b day_01b.cpp)

add_executable(day_02a day_02a.cpp)
add_executable(day_02b day_02b.cpp)

add_executable(day_03a day_03a.cpp)
add_executable(day_03b day_03b.cpp)

add_executable(day_04a day_04a.cpp)
add_executable(day_04b day_04b.cpp)

add_executable(day_05a day_05a.cpp)
add_executable(day_05b day_05b.cpp)

add_executable(day_06a day_06a.cpp)
add_executable(day_06b day_06b.cpp)

add_executable(day_07a day_07a.cpp)
add_executable(day_07b day_07b.cpp)

add_executable(day_08a day_08a.cpp)
add_executable(day_08b day_08b.cpp)

add_executable(day_09a day_09a.cpp)
add_executable(day_09b day_09b.cpp)

add_executable(day_10a day_10a.cpp)
add_executable(day_10b day_10b.cpp)

add_executable(day_11a day_11a.cpp)
add_executable(day_11b day_11b.cpp)

add_executable(day_12a day_12a.cpp)
add_executable(day_12b day_12b.cpp)

add_executable(day_13a day_13a.cpp)
add_executable(day_13b day_13b.cpp)

add_executable(day_14a day_14a.cpp)
add_executable(day_14b day_14b.cpp)

add_executable(day_15a day_15a.cpp)
add_executable(day_15b day_15b.cpp)

#add_executable(day_16a day_16a.cpp)
add_executable(day_16a day_16a_02.cpp) #KO
#add_executable(day_16b day_16b.cpp)

add_executable(day_17a day_17a.cpp)
add_executable(day_17b day_17b.cpp) #KO

add_executable(day_18a day_18a.cpp)
add_executable(day_18b day_18b.cpp)

add_executable(day_19a day_19a.cpp)
add_executable(day_19b day_19b.cpp) #KO

add_executable(day_20a day_20a.cpp)
add_executable(day_20b day_20b.cpp)

add_executable(day_21a day_21a.cpp)
add_executable(day_21b day_21b.cpp)

add_executable(day_22a day_22a.cpp)
add_executable(day_22b day_22b.cpp)

add_executable(day_23a day_23a.cpp)
add_executable(day_23b day_23b.cpp)

add_executable(day_24a day_24a.cpp) #KO
#add_executable(day_24b day_24b.cpp)

add_executable(day_25a day_25a.cpp)
add_executable(day_25b day_25b.cpp)